# printha

./: CMakeLists.txt  LICENSE  README.md
demo/: demo1.sh
demo/1/: sendto.ps
gui/: chrome.manifest
gui/chrome/branding/: brand.dtd  brand.properties
gui/chrome/content/: printha.js  printha.xul  rectbox.css  rectbox.xml
gui/defaults/preferences/: prefs.js
settings/: config.txt
src/: main.cpp  printha.cpp  printha.gui.in  printha.h  printha_settings.cpp  printha_settings.h  uninstall.sh.in
